--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -1,36 +1,209 @@
-.chapter(data-title='Your New Viewsaurus Tutorial')
-  .step(data-title='Welcome!', data-file='tutorial/config.json')
-    h2 Welcome to Viewsaurus
-
-    p Thanks for writing a Viewsaurus tutorial! If you're new to Viewsaurus, feel free to click through this brief tutorial showing you how a Viewsaurus tutorial is structured.
-
-    p The tutorial's navigation controls are located above this text. Use <i class="fa fa-fw fa-play"></i> to move to the next step of the tutorial. Use <i class="fa fa-fw fa-play fa-rotate-180"></i> to move to the previous step of the tutorial (if there is one). Use <i class="fa fa-fw fa-list"></i> to see an overview of all the steps in the tutorial.
-
-    p Let's begin by walking through the files generated for you in the `tutorial` directory with the `saurus new` command - those files are actually what is being used to show you this tutorial right now!
-
-  .step(data-title='Tutorial Configuration', data-file='tutorial/config.json')
+.chapter(data-title='Setting Up The Application')
+  .step(
+    data-title='What Are We Building?',
+    data-file='warm_transfer_flask/call.py')
     :markdown
-      ## Configuration
+      ## Warm Transfer
+      ![Warm Transfer](//howtodocs.s3.amazonaws.com/warm-transfers.png)
 
-      The first file we'll look at is `config.json`. This contains high-level configuration information about your tutorial. This JSON file contains several properties you can declare about your tutorial:
+      Have you ever been disconnected from a support call while being transferred to
+      someone else?
 
-      * `title`: This is the title of your tutorial which will show on the first page
-      * `description`: This is a string of text that will appear above the "Start" button for your tutorial.
-      * `repo`: This is the GitHub repo that your code lives in. Right now we assume all projects are hosted there, but we'll likely make this agnostic in the future.
-      * `heroku`: This indicates whether or not your project supports instant deployment with the [Heroku Button](https://blog.heroku.com/archives/2014/8/7/heroku-button)
+      Warm transfer eliminates this problem. Using Twilio powered
+      warm transfers your agents will have the ability
+      to dial in another agent in real time.
 
-      Now, let's take a look at the first file that contains the actual content of the tutorial, `index.jade`.
+      Here is how it works at a high level:
 
-  .step(data-title='Step Two')
-    h2 Under Construction
+      1. The first agent becomes available when he/she connects through the web client.
 
-    p more tutorial to come.
+      1. The second agent also becomes available when he/she connects through the web client.
 
-  //- Example: include markdown file
-    .step(data-title='Step Three', data-file='', data-highlight='')
-      include:markdown three.md
+      1. A client calls our support line.
 
-  //- Example: include jade file (don't need file extension)
-    .step(data-title='Step Four', data-file='', data-highlight='')
-      include four
+      1. The client stays on hold while the first agent joins the call.
 
+      1. While the first agent is on the phone with the client, he/she can dial a second agent into the call.
+
+      1. Once the second agent is on the call, the first one can disconnect from it.
+      The client and the second agent stay on the call.
+
+      Let's get started!
+
+      ---
+
+      **See Also:**
+      * [Getting Started with Flask](//flask.pocoo.org/docs/0.10/quickstart/)
+      * [Getting started with the Twilio Python library](//www.twilio.com/docs/quickstart/python)
+
+  .step(
+    data-title="Setting Up The Voice Web Hook",
+    data-file='warm_transfer_flask/views.py',
+    data-highlight='11')
+    :markdown
+      ## Setting Up The Voice Web Hook
+
+      First let's configure the voice web-hook for the Twilio number that customers
+      will dial when they want to talk to a support agent.
+      ![Configure Voice](//howtodocs.s3.amazonaws.com/twilio-number-config-all-med.gif)
+
+      This should be the public-facing URL or your app in production.
+      If you are using ngrok, it will look like this: `https://<your-ngrok-id>.ngrok.io/conference/connect/client`
+
+  .step(
+    data-title="Connecting an Agent",
+    data-file='warm_transfer_flask/static/js/main.js',
+    data-highlight='17-51')
+    :markdown
+      ## Connecting an Agent
+
+      Here you can see all front-end code necessary to connect an agent using
+      [Twilio's Voice Web Client](//www.twilio.com/webrtc).
+
+      We essentially need three things to have a live web client:
+      * A capability token (provided by our Flask app)
+      * A unique identifier (string) for each agent
+      * Event listeners to handle different Twilio-triggered events
+
+      In the next step we'll take a closer look into capability token
+      generation.
+
+      ---
+
+      **See also:**
+
+      * [Twilio.js Library](//www.twilio.com/docs/api/client/twilio-js)
+      * [Twilio Client Quickstart](//www.twilio.com/docs/quickstart/client)
+      * [TwiML response with the twilio-python library](//www.twilio.com/docs/quickstart/python/twiml)
+
+  .step(
+    data-title="Generate a Capability Token",
+    data-file='warm_transfer_flask/token.py')
+    :markdown
+      ## Generate a Capability Token
+
+      In order to connect the [Twilio Voice Web Client](//www.twilio.com/webrtc)
+      we need a [capability token](//www.twilio.com/docs/client/capability-tokens).
+
+      To allow incoming connections through the web client an identifier must
+      be provided when generating the token. For this tutorial we used fixed
+      identifier strings like `agent1` and `agent2`, but you can use any
+      generated string for your call center clients. These identifiers will be
+      used to create outbound calls to the specified agent using the [Twilio
+      REST API](//www.twilio.com/docs/api/rest).
+
+      ---
+
+      **See also:**
+
+      * [Twilio Client: Capability Tokens](//www.twilio.com/docs/client/capability-tokens)
+      * [Generate Capability Tokens with twilio-python](//twilio-python.readthedocs.io/en/latest/usage/token-generation.html)
+      * [Making Calls With Twilio REST API](//www.twilio.com/docs/api/rest/making-calls)
+
+  .step(
+    data-title="Handling Incoming Calls",
+    data-file='warm_transfer_flask/views.py',
+    data-highlight='22-31')
+    :markdown
+      ## Handling Incoming Calls
+
+      When a client makes a call to our Twilio number the application receives
+      a POST request asking for instructions. We'll use [TwiML](//www.twilio.com/docs/api/twiml/) to instruct the client
+      to join a conference room and the Twilio REST API client to start a call with
+      the first agent, so he can join the same conference.
+
+      When providing instructions to the client, we also provide a
+      [`waitUrl`](//www.twilio.com/docs/api/twiml/conference#attributes-waitUrl),
+      which in our case is another end point of our application. This returns more TwiML
+      to [say](//www.twilio.com/docs/api/twiml/say) welcome to the user, and also
+      [play](//www.twilio.com/docs/api/twiml/play) some music while on hold.
+      Take a look at the code
+      [here](//github.com/TwilioDevEd/warm-transfer-sinatra/blob/master/lib/twiml_generator.rb#L12-L17)
+
+      We use the client's [`CallSid`](//www.twilio.com/help/faq/voice/what-is-a-call-sid) as the conference identifier. Since all participants
+      need this identifier to join the conference, we'll need to store it in a database so that we can grab it when we dial the second agent in later.
+
+  .step(
+    data-title="Providing TwiML Instruction For The Client",
+    data-file='warm_transfer_flask/twiml_generator.py',
+    data-highlight='13-19')
+    :markdown
+      ## Providing TwiML Instruction For The Client
+
+      Here we create a `TwiMLResponse` that will contain a
+      [`Dial`](//www.twilio.com/docs/api/twiml/dial) verb with a
+      [`Conference`](https://www.twilio.com/docs/api/twiml/conference) noun that
+      will instruct the client to join a specific conference room.
+
+  .step(
+    data-title='Dial First Agent Into the Call',
+    data-file='warm_transfer_flask/call.py')
+    :markdown
+      ## Dial First Agent Into the Call
+
+      For our app we created a `call` module to handle dialing our agents. This module uses
+      Twilio's REST API to create a new call. The `create` method
+      receives the following parameters:
+
+      1. `from_`: Your Twilio number
+
+      1. `to`  : The agent web client's identifier (`agent1` or `agent2`)
+
+      1. `url` : A URL to ask for TwiML instructions when the call connects
+
+      Once the agent answers the call in the web client, a request is made to the
+      callback URL instructing this call to join the conference where
+      the client is already waiting.
+
+  .step(
+    data-title='Dial Second Agent Into the Call',
+    data-file='warm_transfer_flask/views.py',
+    data-highlight='38-42')
+    :markdown
+      ## Dial Second Agent Into the Call
+
+      When the client and the first agent are both in the call we are ready to
+      perform a *warm  transfer* to a second agent. The first agent makes a
+      request passing its `identifier` to allow us to look for the `conference_id`
+      needed to dial the second agent in. Since we already have a `call` module we can simply use the `call_agent` function to connect the second agent in.
+
+  .step(
+    data-title='The First Agent Leaves the Call',
+    data-file='warm_transfer_flask/twiml_generator.py',
+    data-highlight='16-17')
+    :markdown
+      ## The First Agent Leaves the Call
+
+      When the three participants have joined the same call, the first agent has
+      served his purpose. Now he can drop the call, leaving agent two and the client
+      to have a pleasant conversation.
+
+      It is important to notice the differences between the TwiML each one of the
+      participants received when joining the call. Both, agent one and two, have
+      `startConferenceOnEnter` set to `true`. This means the conference will start when
+      any of them joins the call. For the client calling and for agent two, `endConferenceOnExit`
+      is set to true. This causes the call to end when either of these two participants
+      drops the call.
+
+  .step
+    :markdown
+      ## Where to next?
+
+      That's it! We have just implemented warm transfers using Python and Flask.
+      Now your clients won't get disconnect from support calls while they are being
+      transferred to some else.
+
+      If you're a Python developer working with Twilio, you might also enjoy these
+      tutorials:
+
+      [**Automated-Survey-Flask**](//www.twilio.com/docs/tutorials/walkthrough/automated-survey/python/flask)
+
+      Instantly collect structured data from your users with a survey conducted over a voice call or SMS text messages.
+
+      [**Browser-Calls**](//www.twilio.com/docs/tutorials/walkthrough/browser-calls/python/flask)
+
+      Learn how to use Twilio Client to make browser-to-phone and browser-to-browser calls with ease.
+
+      Thanks for checking out this tutorial! If you have any feedback
+      to share with us, we'd love to hear it.
+      [Contact the Twilio Developer Education Team](mailto:deved-oss@twilio.com) to let us know what you think.
