Fixes a broken link

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -119,7 +119,7 @@
       to [say](//www.twilio.com/docs/api/twiml/say) welcome to the user and also
       [play](//www.twilio.com/docs/api/twiml/play) some music while on hold.
       Take a look at the code
-      [here](//github.com/TwilioDevEd/warm-transfer-sinatra/blob/master/lib/twiml_generator.rb#L12-L17)
+      [here](//github.com/TwilioDevEd/warm-transfer-flask/blob/master/warm_transfer_flask/twiml_generator.py#L4-10)
 
       We use the client's [`CallSid`](//www.twilio.com/help/faq/voice/what-is-a-call-sid) as the conference identifier. Since all participants
       need this identifier to join the conference, we'll need to store it in a database so that we can grab it when we dial the second agent in.
